CCT-2181 change
Change-Id: Icb58723dd5ff57d7991c7873b436a7059329a71c